# awl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF_TO_GPD.md  README.md  REPORT_DISPATCH_RELIABILITY.md  REVIEW.md  SECURITY.md  UPDATED_PROGRESS_REPORT.md  benchmark.py  config.py  publish-prep.sh  sum_sq  vault.sh
.claude/agents/: awl-worker.md
.claude/skills/awl-dispatch/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.gpd/: CONVENTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  state.json
.gpd/phases/01-implementation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.gpd/phases/02-benchmarking/: 02-01-SUMMARY.md  02-02-SUMMARY.md
GPD/: CONVENTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json
GPD/literature/: COMPUTATIONAL.md  METHODS.md  PITFALLS.md  PRIOR-WORK.md  SUMMARY.md
GPD/phases/01-reliability-and-measurement-patches/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
GPD/research-map/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  FORMALISM.md  REFERENCES.md  STRUCTURE.md  VALIDATION.md  status.md
examples/: awl-worker.md  claude-code.mcp.json  codex-config.toml
experiments/: README.md  run_awl_arm.sh  tally.py  test_tally.py
experiments/tasks/01_string_helper/: setup.sh  task.json
experiments/tasks/02_validate_input/: setup.sh  task.json
experiments/tasks/03_fix_off_by_one/: setup.sh  task.json
hooks/: pre-agent.sh  snapshot.sh
offline/: backup-setup.md  gpd-audit-results.md  gpd-probe.py  mcp-offline.json
results/: benchmark_results.csv
scripts/: dispatch_cost_report.py  dispatch_eval.sh  install.sh  test_dispatch_cost_report.py
sorting/: merge_sort.py  quicksort.py  radix_sort.py
src/: agent.rs  config.rs  defaults.rs  dispatch.rs  doctor.rs  hashline.rs  init.rs  llm_io.rs  main.rs  mcp_client.rs  mcp_server.rs  phases.rs  plan.rs  repomap.rs  safety.rs  session.rs  tools.rs
tests/: test_all_algorithms.py  test_merge_sort.py  test_quicksort.py  test_radix_sort.py
