[package]
name = "claw"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Local agentic coding dispatch CLI for Ollama-hosted models"

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
petgraph = "0.6"
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
glob = "0.3"
walkdir = "2.5"
regex = "1"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
