[package]
name = "awl"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Local agentic coding CLI for Ollama-hosted models with tool use, phase discipline, and resumable sessions"
authors = ["Evan Watson <etwatson@ucsd.edu>"]
repository = "https://github.com/ev-watson/awl"
homepage = "https://github.com/ev-watson/awl"
keywords = ["agent", "coding", "ollama", "cli", "autonomous"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = [
    "src/**/*",
    "scripts/dispatch_cost_report.py",
    "scripts/dispatch_eval.sh",
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "Cargo.lock",
    "vault.sh",
]

[[bin]]
name = "awl"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time"] }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
petgraph = "0.8"
glob = "0.3"
walkdir = "2.5"
rand = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
